--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-
 <html>
-    <head>
-        <title>A Simple Webpage</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <p>
-            What is your name? <input id="inName" maxlength="15">
-            <button id="btnSubmit">Submit</button>
-        </p>
-        <h2 id="hello"></h3>
+
+<head>
+    <title>A Simple Webpage</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <p>
+        What is your name? <input id="inName" maxlength="15">
+        <button id="btnSubmit">SUBMIT</button>
+    </p>
+    <h2 id="hello">
+        </h3>
         <script src="./index.js"></script>
-    </body>
+</body>
+
 </html>
