changed submit and h3

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <p>
         What is your name? <input id="inName" maxlength="15">
-        <button id="btnSubmit">SUBMIT</button>
+        <button id="btnSubmit">upload</button>
     </p>
-    <h2 id="hello">
-        </h3>
-        <script src="./index.js"></script>
+    <h3 id="hello">
+    </h3>
+    <script src="./index.js"></script>
 </body>
 
 </html>
