--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <p>
         What is your name? <input id="inName" maxlength="15">
-        <button id="btnSubmit">upload</button>
+        <button id="btnSubmit">submit</button>
     </p>
-    <h3 id="hello">
-    </h3>
+    <h1 id="hello">
+    </h1>
     <script src="./index.js"></script>
 </body>
 
