--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>
         What is your name? <input id="inName" maxlength="15">
-        <button id="btnSubmit">upload</button>
+        <button id="BTNSUBMIT">upload</button>
     </p>
     <h3 id="hello">
     </h3>
